<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="296dp"

            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="241dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textview1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FBFBFB"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/textview1"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FBFBFB"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:text="@string/textview2"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FBFBFB"
                    android:gravity="center|left"
                    android:text="@string/textview3"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:background="#FBFBFB"
                    android:foregroundGravity="center"
                    android:gravity="center|left"
                    android:text="@string/textview4"
                    android:textSize="16sp"
                    android:textStyle="bold"></TextView>

            </LinearLayout>

            <LinearLayout

                android:layout_width="243dp"
                android:layout_height="241dp"
                android:layout_marginLeft="25dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"

                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"

                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:textSize="24sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/button1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_marginTop="300dp"
        android:onClick="onClick"
        android:text="@string/button1" />

</RelativeLayout>